# BIT2400-Summer-

A01/: BIT2400_start.cpp  CMakeLists.txt  Paint.cpp  Paint.h  PaintJob.cpp  PaintJob.h
CPractice/: CMakeLists.txt  main.c
MidtermPractice/: CMakeLists.txt  Employee.cpp  Employee.h  main.cpp
MidtermPractice2/: CMakeLists.txt  Employee.cpp  Employee.h  main.cpp
MidtermPractice3/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
MidtermPractice4/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
MidtermPractice5/: CMakeLists.txt  Instruments.cpp  Instruments.h  main.cpp
MidtermPractice6/: Animals.cpp  Animals.h  CMakeLists.txt  main.cpp
MistermPractice7/: CMakeLists.txt
Morgan_Gardiner_A02/: CMakeLists.txt  birdHouse.cpp  birdHouse.h  main.cpp
Morgan_Gardiner_A03/: CMakeLists.txt  Faculty.cpp  Faculty.h  FullTime.cpp  FullTime.h  Graduate.cpp  Graduate.h  PartTime.cpp  PartTime.h  Person.cpp  Person.h  Student.cpp  Student.h  UnderGrad.cpp  UnderGrad.h
Morgan_Gardiner_m24/: CMakeLists.txt
T01_Classes_MG/: CMakeLists.txt  CarletonStudent.cpp  CarletonStudent.h  Student.cpp  Student.h  main.cpp
T02_Input_Output/: CMakeLists.txt  main.cpp
T03_Enums_Strings_Namespaces/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
T04_Methods_Virtuals/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  main.cpp
T05_Operators_Overloads/: CMakeLists.txt  Vector2D.cpp  Vector2D.h  main.cpp
T06_Object_Oriented_Design/: CMakeLists.txt  Item.cpp  Item.h  POS.cpp  POS.h  main.cpp
T07_Object_Oriented_Design_2/: CMakeLists.txt  Ticket.cpp  Ticket.h  TicketSystem.cpp  (+2 more)
(+14 files in other folders)
